// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Drawer[Base] should render correctly about base 1`] = `
<div
  class="so-modal-wrapper so-modal-wrapper-animation so-modal-wrapper-show so-modal-wrapper-is-mask so-modal-wrapper-drawer so-modal-wrapper-drawer-right"
>
  <div
    class="so-modal-mask"
  >
    <div
      class="so-modal-panel"
      style="width: 400px;"
    >
      <div
        class="so-modal-header"
      >
        <div
          class="so-modal-header-title"
        >
          Drawer Title
        </div>
        <div
          class="so-modal-header-close"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M4.6129 3.2097L4.70711 3.29289L12 10.585L19.2929 3.29289C19.6834 2.90237 20.3166 2.90237 20.7071 3.29289C21.0676 3.65338 21.0953 4.22061 20.7903 4.6129L20.7071 4.70711L13.415 12L20.7071 19.2929C21.0976 19.6834 21.0976 20.3166 20.7071 20.7071C20.3466 21.0676 19.7794 21.0953 19.3871 20.7903L19.2929 20.7071L12 13.415L4.70711 20.7071C4.31658 21.0976 3.68342 21.0976 3.29289 20.7071C2.93241 20.3466 2.90468 19.7794 3.2097 19.3871L3.29289 19.2929L10.585 12L3.29289 4.70711C2.90237 4.31658 2.90237 3.68342 3.29289 3.29289C3.65338 2.93241 4.22061 2.90468 4.6129 3.2097Z"
            />
          </svg>
        </div>
      </div>
      <div
        class="so-modal-body"
      >
        you are visited 1
      </div>
      <div
        class="so-modal-footer"
      >
        <button
          class="so-button-secondary so-button-button so-button-outline"
          type="button"
        >
          <span>
            Cancel
          </span>
        </button>
        <button
          class="so-button-primary so-button-button"
          type="button"
        >
          <span>
            Ok
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer[Base] should render correctly about close 1`] = `
<div
  class="so-modal-wrapper so-modal-wrapper-animation so-modal-wrapper-show so-modal-wrapper-is-mask so-modal-wrapper-drawer so-modal-wrapper-drawer-right"
>
  <div
    class="so-modal-mask"
  >
    <div
      class="so-modal-panel"
      style="width: 400px;"
    >
      <div
        class="so-modal-header"
      >
        <div
          class="so-modal-header-title"
        >
          Modal Title
        </div>
      </div>
      <div
        class="so-modal-body"
      >
        The prop maskCloseAble is  
        false
        .
        <br />
        You must click the button to close the Modal.
      </div>
      <div
        class="so-modal-footer"
      >
        <button
          class="so-button-secondary so-button-button so-button-outline"
          type="button"
        >
          <span>
            Close
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer[Base] should render correctly about container 1`] = `
<div
  class="so-modal-wrapper so-modal-wrapper-animation so-modal-wrapper-show so-modal-wrapper-is-mask so-modal-wrapper-drawer so-modal-wrapper-drawer-right"
>
  <div
    class="so-modal-mask"
  >
    <div
      class="so-modal-panel"
      style="width: 400px;"
    >
      <div
        class="so-modal-header"
      >
        <div
          class="so-modal-header-title"
        >
          Drawer Title
        </div>
        <div
          class="so-modal-header-close"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M4.6129 3.2097L4.70711 3.29289L12 10.585L19.2929 3.29289C19.6834 2.90237 20.3166 2.90237 20.7071 3.29289C21.0676 3.65338 21.0953 4.22061 20.7903 4.6129L20.7071 4.70711L13.415 12L20.7071 19.2929C21.0976 19.6834 21.0976 20.3166 20.7071 20.7071C20.3466 21.0676 19.7794 21.0953 19.3871 20.7903L19.2929 20.7071L12 13.415L4.70711 20.7071C4.31658 21.0976 3.68342 21.0976 3.29289 20.7071C2.93241 20.3466 2.90468 19.7794 3.2097 19.3871L3.29289 19.2929L10.585 12L3.29289 4.70711C2.90237 4.31658 2.90237 3.68342 3.29289 3.29289C3.65338 2.93241 4.22061 2.90468 4.6129 3.2097Z"
            />
          </svg>
        </div>
      </div>
      <div
        class="so-modal-body"
      >
        Drawer mount after Button
      </div>
      <div
        class="so-modal-footer"
      >
        <button
          class="so-button-secondary so-button-button so-button-outline"
          type="button"
        >
          <span>
            Cancel
          </span>
        </button>
        <button
          class="so-button-primary so-button-button"
          type="button"
        >
          <span>
            Ok
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer[Base] should render correctly about form 1`] = `
<div
  class="so-modal-wrapper so-modal-wrapper-animation so-modal-wrapper-show so-modal-wrapper-is-mask so-modal-wrapper-drawer so-modal-wrapper-drawer-right"
>
  <div
    class="so-modal-mask"
  >
    <div
      class="so-modal-panel"
      style="width: 456px;"
    >
      <div
        class="so-modal-header"
      >
        <div
          class="so-modal-header-title"
        >
          Form
        </div>
        <div
          class="so-modal-header-close"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M4.6129 3.2097L4.70711 3.29289L12 10.585L19.2929 3.29289C19.6834 2.90237 20.3166 2.90237 20.7071 3.29289C21.0676 3.65338 21.0953 4.22061 20.7903 4.6129L20.7071 4.70711L13.415 12L20.7071 19.2929C21.0976 19.6834 21.0976 20.3166 20.7071 20.7071C20.3466 21.0676 19.7794 21.0953 19.3871 20.7903L19.2929 20.7071L12 13.415L4.70711 20.7071C4.31658 21.0976 3.68342 21.0976 3.29289 20.7071C2.93241 20.3466 2.90468 19.7794 3.2097 19.3871L3.29289 19.2929L10.585 12L3.29289 4.70711C2.90237 4.31658 2.90237 3.68342 3.29289 3.29289C3.65338 2.93241 4.22061 2.90468 4.6129 3.2097Z"
            />
          </svg>
        </div>
      </div>
      <div
        class="so-modal-body"
      >
        <form
          class="so-form-wrapper"
          style="max-width: 400px;"
        >
          <div
            class="so-form-item-wrapper so-form-item-wrapper-required"
          >
            <div
              class="so-form-item-label"
              style="width: 100px;"
            >
              Email
            </div>
            <div
              class="so-form-item-control"
            >
              <div
                class="so-input-wrapper"
                data-soui-type="input"
              >
                <div
                  class="so-input-wrapper-inner-title-top so-input-wrapper-inner-title-bottom so-input-wrapper-padding-box so-input-content"
                >
                  <input
                    class="so-input-input"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="so-form-item-wrapper so-form-item-wrapper-required"
          >
            <div
              class="so-form-item-label"
              style="width: 100px;"
            >
              Password
            </div>
            <div
              class="so-form-item-control"
            >
              <div
                class="so-input-wrapper"
                data-soui-type="input"
              >
                <div
                  class="so-input-wrapper-inner-title-top so-input-wrapper-inner-title-bottom so-input-wrapper-padding-box so-input-content"
                >
                  <input
                    class="so-input-input"
                    type="password"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
      <div
        class="so-modal-footer"
      >
        <div>
          <button
            class="so-button-secondary so-button-button so-button-outline"
            type="button"
          >
            <span>
              Cancel
            </span>
          </button>
          <button
            class="so-button-primary so-button-button"
            type="button"
          >
            <span>
              Submit
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer[Base] should render correctly about full screen 1`] = `
<div
  class="so-modal-wrapper so-modal-wrapper-animation so-modal-wrapper-show so-modal-wrapper-is-mask so-modal-wrapper-full-screen so-modal-wrapper-drawer so-modal-wrapper-drawer-right"
>
  <div
    class="so-modal-mask"
  >
    <div
      class="so-modal-panel"
    >
      <div
        class="so-modal-header"
      >
        <div
          class="so-modal-header-title"
        >
          Profile
        </div>
        <div
          class="so-modal-header-close"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M4.6129 3.2097L4.70711 3.29289L12 10.585L19.2929 3.29289C19.6834 2.90237 20.3166 2.90237 20.7071 3.29289C21.0676 3.65338 21.0953 4.22061 20.7903 4.6129L20.7071 4.70711L13.415 12L20.7071 19.2929C21.0976 19.6834 21.0976 20.3166 20.7071 20.7071C20.3466 21.0676 19.7794 21.0953 19.3871 20.7903L19.2929 20.7071L12 13.415L4.70711 20.7071C4.31658 21.0976 3.68342 21.0976 3.29289 20.7071C2.93241 20.3466 2.90468 19.7794 3.2097 19.3871L3.29289 19.2929L10.585 12L3.29289 4.70711C2.90237 4.31658 2.90237 3.68342 3.29289 3.29289C3.65338 2.93241 4.22061 2.90468 4.6129 3.2097Z"
            />
          </svg>
        </div>
      </div>
      <div
        class="so-modal-body"
      >
        <div>
          <form
            class="so-form-wrapper"
          >
            <div
              class="so-form-item-wrapper"
            >
              <div
                class="so-form-item-label"
              >
                name
              </div>
              <div
                class="so-form-item-control"
              >
                <div
                  class="so-input-wrapper"
                  data-soui-type="input"
                >
                  <div
                    class="so-input-wrapper-inner-title-top so-input-wrapper-inner-title-bottom so-input-wrapper-padding-box so-input-content"
                  >
                    <input
                      class="so-input-input"
                      placeholder="please input name"
                      value="zhangsan"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="so-form-item-wrapper"
            >
              <div
                class="so-form-item-label"
              >
                email
              </div>
              <div
                class="so-form-item-control"
              >
                <div
                  class="so-input-wrapper"
                  data-soui-type="input"
                >
                  <div
                    class="so-input-wrapper-inner-title-top so-input-wrapper-inner-title-bottom so-input-wrapper-padding-box so-input-content"
                  >
                    <input
                      class="so-input-input"
                      placeholder="please input email"
                      value="zhangsan@qq.com"
                    />
                    <div
                      class="so-input-clear-wrapper"
                    >
                      <span
                        class="so-input-clear"
                      >
                        <svg
                          aria-hidden="true"
                          fill="currentColor"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M12 23C5.924 23 1 18.076 1 12C1 5.924 5.924 1 12 1C18.076 1 23 5.924 23 12C23 18.076 18.076 23 12 23Z"
                            fill="currentColor"
                          />
                          <path
                            d="M9.6129 8.2097C9.22061 7.90468 8.65338 7.93241 8.29289 8.29289C7.90237 8.68342 7.90237 9.31658 8.29289 9.70711L10.413 11.828L8.29289 13.9497L8.2097 14.044C7.90468 14.4362 7.93241 15.0035 8.29289 15.364C8.68342 15.7545 9.31658 15.7545 9.70711 15.364L11.828 13.242L13.9497 15.364L14.044 15.4471C14.4362 15.7522 15.0035 15.7244 15.364 15.364C15.7545 14.9734 15.7545 14.3403 15.364 13.9497L13.242 11.828L15.364 9.70711L15.4471 9.6129C15.7522 9.22061 15.7244 8.65338 15.364 8.29289C14.9734 7.90237 14.3403 7.90237 13.9497 8.29289L11.828 10.413L9.70711 8.29289L9.6129 8.2097Z"
                            fill="white"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="so-form-item-wrapper"
            >
              <div
                class="so-form-item-label"
              />
              <div
                class="so-form-item-control"
              >
                <button
                  type="submit"
                >
                  提交
                </button>
                <button
                  type="reset"
                >
                  重置
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
      <div
        class="so-modal-footer"
      >
        <button
          class="so-button-primary so-button-button"
          type="button"
        >
          <span>
            OK
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer[Base] should render correctly about hide mask 1`] = `
<div
  class="so-modal-wrapper so-modal-wrapper-animation so-modal-wrapper-show so-modal-wrapper-is-mask so-modal-wrapper-hide-mask so-modal-wrapper-drawer so-modal-wrapper-drawer-right"
>
  <div
    class="so-modal-mask"
  >
    <div
      class="so-modal-panel"
      style="width: 400px;"
    >
      <div
        class="so-modal-header"
      >
        <div
          class="so-modal-header-title"
        >
          Drawer Title
        </div>
        <div
          class="so-modal-header-close"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M4.6129 3.2097L4.70711 3.29289L12 10.585L19.2929 3.29289C19.6834 2.90237 20.3166 2.90237 20.7071 3.29289C21.0676 3.65338 21.0953 4.22061 20.7903 4.6129L20.7071 4.70711L13.415 12L20.7071 19.2929C21.0976 19.6834 21.0976 20.3166 20.7071 20.7071C20.3466 21.0676 19.7794 21.0953 19.3871 20.7903L19.2929 20.7071L12 13.415L4.70711 20.7071C4.31658 21.0976 3.68342 21.0976 3.29289 20.7071C2.93241 20.3466 2.90468 19.7794 3.2097 19.3871L3.29289 19.2929L10.585 12L3.29289 4.70711C2.90237 4.31658 2.90237 3.68342 3.29289 3.29289C3.65338 2.93241 4.22061 2.90468 4.6129 3.2097Z"
            />
          </svg>
        </div>
      </div>
      <div
        class="so-modal-body"
      >
        you are visited 1
      </div>
      <div
        class="so-modal-footer"
      >
        <button
          class="so-button-secondary so-button-button so-button-outline"
          type="button"
        >
          <span>
            Cancel
          </span>
        </button>
        <button
          class="so-button-primary so-button-button"
          type="button"
        >
          <span>
            Ok
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer[Base] should render correctly about position 1`] = `
<div
  class="so-modal-wrapper so-modal-wrapper-animation so-modal-wrapper-show so-modal-wrapper-is-mask so-modal-wrapper-drawer so-modal-wrapper-drawer-right"
>
  <div
    class="so-modal-mask"
  >
    <div
      class="so-modal-panel"
      style="width: auto;"
    >
      <div
        class="so-modal-header"
      >
        <div
          class="so-modal-header-title"
        >
          Form
        </div>
        <div
          class="so-modal-header-close"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M4.6129 3.2097L4.70711 3.29289L12 10.585L19.2929 3.29289C19.6834 2.90237 20.3166 2.90237 20.7071 3.29289C21.0676 3.65338 21.0953 4.22061 20.7903 4.6129L20.7071 4.70711L13.415 12L20.7071 19.2929C21.0976 19.6834 21.0976 20.3166 20.7071 20.7071C20.3466 21.0676 19.7794 21.0953 19.3871 20.7903L19.2929 20.7071L12 13.415L4.70711 20.7071C4.31658 21.0976 3.68342 21.0976 3.29289 20.7071C2.93241 20.3466 2.90468 19.7794 3.2097 19.3871L3.29289 19.2929L10.585 12L3.29289 4.70711C2.90237 4.31658 2.90237 3.68342 3.29289 3.29289C3.65338 2.93241 4.22061 2.90468 4.6129 3.2097Z"
            />
          </svg>
        </div>
      </div>
      <div
        class="so-modal-body"
      >
        <form
          class="so-form-wrapper"
          style="width: 500px;"
        >
          <div
            class="so-form-item-wrapper so-form-item-wrapper-required"
          >
            <div
              class="so-form-item-label"
              style="width: 100px;"
            >
              Email
            </div>
            <div
              class="so-form-item-control"
            >
              <div
                class="so-input-wrapper"
                data-soui-type="input"
              >
                <div
                  class="so-input-wrapper-inner-title-top so-input-wrapper-inner-title-bottom so-input-wrapper-padding-box so-input-content"
                >
                  <input
                    class="so-input-input"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="so-form-item-wrapper so-form-item-wrapper-required"
          >
            <div
              class="so-form-item-label"
              style="width: 100px;"
            >
              Password
            </div>
            <div
              class="so-form-item-control"
            >
              <div
                class="so-input-wrapper"
                data-soui-type="input"
              >
                <div
                  class="so-input-wrapper-inner-title-top so-input-wrapper-inner-title-bottom so-input-wrapper-padding-box so-input-content"
                >
                  <input
                    class="so-input-input"
                    type="password"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
      <div
        class="so-modal-footer"
      >
        <div>
          <button
            class="so-button-secondary so-button-button so-button-outline"
            type="button"
          >
            <span>
              Cancel
            </span>
          </button>
          <button
            class="so-button-primary so-button-button"
            type="button"
          >
            <span>
              Submit
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer[Base] should render correctly about resizable 1`] = `
<div
  class="so-modal-wrapper so-modal-wrapper-animation so-modal-wrapper-show so-modal-wrapper-is-mask so-modal-wrapper-drawer so-modal-wrapper-drawer-right"
>
  <div
    class="so-modal-mask"
  >
    <div
      class="so-modal-panel"
      style="width: auto;"
    >
      <div
        class="so-modal-header"
      >
        <div
          class="so-modal-header-title"
        >
          Form
        </div>
        <div
          class="so-modal-header-close"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M4.6129 3.2097L4.70711 3.29289L12 10.585L19.2929 3.29289C19.6834 2.90237 20.3166 2.90237 20.7071 3.29289C21.0676 3.65338 21.0953 4.22061 20.7903 4.6129L20.7071 4.70711L13.415 12L20.7071 19.2929C21.0976 19.6834 21.0976 20.3166 20.7071 20.7071C20.3466 21.0676 19.7794 21.0953 19.3871 20.7903L19.2929 20.7071L12 13.415L4.70711 20.7071C4.31658 21.0976 3.68342 21.0976 3.29289 20.7071C2.93241 20.3466 2.90468 19.7794 3.2097 19.3871L3.29289 19.2929L10.585 12L3.29289 4.70711C2.90237 4.31658 2.90237 3.68342 3.29289 3.29289C3.65338 2.93241 4.22061 2.90468 4.6129 3.2097Z"
            />
          </svg>
        </div>
      </div>
      <div
        class="so-modal-body"
      >
        <form
          class="so-form-wrapper"
          style="width: 500px;"
        >
          <div
            class="so-form-item-wrapper so-form-item-wrapper-required"
          >
            <div
              class="so-form-item-label"
              style="width: 100px;"
            >
              Email
            </div>
            <div
              class="so-form-item-control"
            >
              <div
                class="so-input-wrapper"
                data-soui-type="input"
              >
                <div
                  class="so-input-wrapper-inner-title-top so-input-wrapper-inner-title-bottom so-input-wrapper-padding-box so-input-content"
                >
                  <input
                    class="so-input-input"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="so-form-item-wrapper so-form-item-wrapper-required"
          >
            <div
              class="so-form-item-label"
              style="width: 100px;"
            >
              Password
            </div>
            <div
              class="so-form-item-control"
            >
              <div
                class="so-input-wrapper"
                data-soui-type="input"
              >
                <div
                  class="so-input-wrapper-inner-title-top so-input-wrapper-inner-title-bottom so-input-wrapper-padding-box so-input-content"
                >
                  <input
                    class="so-input-input"
                    type="password"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
      <div
        class="so-modal-footer"
      >
        <div>
          <button
            class="so-button-secondary so-button-button so-button-outline"
            type="button"
          >
            <span>
              Cancel
            </span>
          </button>
          <button
            class="so-button-primary so-button-button"
            type="button"
          >
            <span>
              Submit
            </span>
          </button>
        </div>
      </div>
      <div
        class="so-modal-resize-x"
        data-position="right"
      />
    </div>
  </div>
</div>
`;

exports[`Drawer[Base] should render correctly about type 1`] = `
<div
  class="so-modal-wrapper so-modal-wrapper-animation so-modal-wrapper-show so-modal-wrapper-is-mask so-modal-wrapper-drawer so-modal-wrapper-drawer-right"
>
  <div
    class="so-modal-mask"
  >
    <div
      class="so-modal-panel"
      style="width: 500px;"
    >
      <div
        class="so-modal-header"
      >
        <span
          class="so-modal-header-icon so-alert-icon so-alert-success-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 23C5.92487 23 1 18.0751 1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23ZM6.34315 13.8284L8.46305 15.9483C9.24511 16.7304 10.5122 16.7304 11.2943 15.9483L17.6569 9.58579C18.0472 9.19546 18.0472 8.5619 17.6569 8.17157C17.2665 7.78125 16.633 7.78125 16.2426 8.17157L10.5872 13.827C10.1962 14.218 9.56119 14.218 9.17016 13.827L7.75736 12.4142C7.36704 12.0239 6.73347 12.0239 6.34315 12.4142C5.95282 12.8045 5.95282 13.4381 6.34315 13.8284Z"
            />
          </svg>
        </span>
        <div
          class="so-modal-header-title"
        >
          Drawer Title with success Icon
        </div>
        <div
          class="so-modal-header-close"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M4.6129 3.2097L4.70711 3.29289L12 10.585L19.2929 3.29289C19.6834 2.90237 20.3166 2.90237 20.7071 3.29289C21.0676 3.65338 21.0953 4.22061 20.7903 4.6129L20.7071 4.70711L13.415 12L20.7071 19.2929C21.0976 19.6834 21.0976 20.3166 20.7071 20.7071C20.3466 21.0676 19.7794 21.0953 19.3871 20.7903L19.2929 20.7071L12 13.415L4.70711 20.7071C4.31658 21.0976 3.68342 21.0976 3.29289 20.7071C2.93241 20.3466 2.90468 19.7794 3.2097 19.3871L3.29289 19.2929L10.585 12L3.29289 4.70711C2.90237 4.31658 2.90237 3.68342 3.29289 3.29289C3.65338 2.93241 4.22061 2.90468 4.6129 3.2097Z"
            />
          </svg>
        </div>
      </div>
      <div
        class="so-modal-body so-modal-body-with-icon"
      >
        <span>
          Drawer type: 
        </span>
        <b>
          success
        </b>
      </div>
      <div
        class="so-modal-footer"
      >
        <button
          class="so-button-secondary so-button-button so-button-outline"
          type="button"
        >
          <span>
            Cancel
          </span>
        </button>
        <button
          class="so-button-primary so-button-button"
          type="button"
        >
          <span>
            Ok
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
